# DdC

./: .dockerignore  .env.example  .gitignore  Dockerfile  LAVORI.md  README.md  docker-compose.yml  prd.json  progress.txt  pyproject.toml
.claude/: CLAUDE.md  settings.json
app/: config.py  main.py  security.py
app/core/: calculator.py  cantonal_engine.py  federal_engine.py  meals_engine.py  other_expenses.py  special_cases.py
app/geo/: distance.py  resolver.py  tp_proximity.py
app/rules/: loader.py  models.py
app/schemas/: request.py  response.py
app/static/: index.html
docs/: Analisi_IT_WebService_DdC.docx  CLAUDE.md  api-docs.yaml  deploy-infomaniak-nano.md  openapi.json  quali-prossime-funyionalit-a-potrei-wiggly-matsumoto.md  security.md  stima-junior-developer.docx
rules/: 2025.yaml  2026.yaml
scripts/: export_openapi.py  generate_cost_estimate_docx.py
tasks/: prd-fase-10-mappa-coniuge-accertamento.md  prd-fase-11-e2e-browser.md  prd-fase-9-fix-homeoffice-trasparenza-tp.md  prd-roadmap-trasferta-api.md
tests/: conftest.py
tests/e2e/: conftest.py  helpers.py  test_lohnausweis_other.py  test_map.py  test_meals_accommodation.py  test_mixed.py  test_moto_bici.py  test_pdf_assessment.py  test_private_car.py  test_public_transport.py  test_smoke.py  test_spouse.py  test_validation_ux.py
tests/integration/: test_api_deduction.py  test_locations.py  test_security.py  test_security_headers.py
tests/unit/: test_arcobaleno_lookup.py  test_cantonal_engine.py  test_fase10_spouse.py  test_fase12_npa_alt.py  test_fase12_route.py  test_federal_engine.py  (+7 more)
(+16 files in other folders)
