[project]
name = "ddc-trasferta-service"
version = "0.1.0"
description = "Web service calcolo deduzioni trasferta casa-lavoro — Canton Ticino"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.10",
    "aiofiles>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "pip-audit>=2.7",
    "playwright>=1.40",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: test end-to-end nel browser (Playwright) — Fase 11",
]
